manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: nocountry.azurecr.io/frontend:4091e7f45ddef373283973cb2b811362181c2978
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: demo-k8s-secret
