manifests/frontend-chatgpt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nocountryc1210.azurecr.io/frontend:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: angular-config-volume
          mountPath: /src/environments/

        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf/
      imagePullSecrets:
      - name: demo-k8s-secret

      volumes:
        - name: angular-config-volume
          configMap:
            name: angular-cm
            items:
            - key: environment.ts
              path: environment.ts

        - name: nginx-config-volume
          configMap:
            name: nginx-cm
            items:
            - key: nginx.conf
              path: nginx.conf
